Use Files.walk and Files.newDirectoryStream side-by-side